# psy-taliro

./: .cspell.json  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml
docs/: _substitutions.rst  architecture.rst  caveats.rst  conf.py  cost_func.rst  examples.rst  index.rst  installation.rst  models.rst  optimizers.rst  options.rst  quickstart.rst  results.rst  signals.rst  specifications.rst
docs/_examples/: introduction.py
docs/api/: cost_func.rst  index.rst  models.rst  optimizers.rst  options.rst  signals.rst  specifications.rst
examples/: Autotrans_shift.mdl  autotrans.py  basic.py  bilevel.py  bimodal.py  f16.py  nonlinear.py  post_processing.py  timing.py
src/staliro/: __about__.py  __init__.py  cost.py  cost_func.py  models.py  optimizers.py  options.py  results.py  sample.py  scenarios.py  signals.py  specification.py  specifications.py  staliro.py  tests.py  timing.py
src/staliro/core/: __init__.py  cost.py  interval.py  layout.py  model.py  optimizer.py  result.py  sample.py  scenario.py  signal.py  specification.py
src/staliro/models/: __init__.py  blackbox.py  model.py  ode.py
src/staliro/optimizers/: __init__.py  basinhopping.py  dual_annealing.py  optimizer.py  uniform_random.py
src/staliro/parser/: __init__.py  parser.py  stlLexer.py  stlParser.py  stlParserListener.py  stlParserVisitor.py  stlParserVisitorTranslator.py  stlSpecification.py  stlTptlParserVisitorTranslator.py
src/staliro/parser/grammar/: stlLexer.g4  stlParser.g4
src/staliro/specifications/: __init__.py  banquo.py  rtamt.py  specification.py
stubs/: sortedcontainers.pyi  tltk_mtl.pyi
stubs/matplotlib/: axes.pyi  figure.pyi  pyplot.pyi
stubs/pandas/: __init__.pyi  testing.pyi
stubs/pathos/: abstract_launcher.pyi  multiprocessing.pyi  pools.pyi
stubs/rtamt/: __init__.pyi
stubs/rtamt/enumerations/: options.pyi
stubs/rtamt/exception/: exception.pyi
stubs/rtamt/exception/ltl/: exception.pyi
stubs/rtamt/exception/stl/: exception.pyi
stubs/rtamt/spec/stl/discrete_time/: specification.pyi
stubs/scipy/: integrate.pyi  interpolate.pyi  optimize.pyi
stubs/taliro/: tptaliro.pyi
stubs/tltk_mtl/: __init__.pyi
tests/: test_cost_func.py  test_models.py  test_optimizers.py  test_options.py  test_sample.py  test_signals.py  test_specification.py  test_specifications.py  test_staliro.py  test_trace.py
tests/core/: test_cost.py  test_interval.py  test_model.py  test_result.py  test_sample.py  test_scenario.py
tests/data/: constant_trace.csv  pchip_trace.csv  trajectory.csv
tests/parser/: _parser.py  test_and.py  test_finally.py  test_globally.py  test_implies.py  test_negation.py  test_next.py  test_or.py  test_predicate.py  test_stl_to_tptl.py
