[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psy-taliro"
dynamic = ["version"]
description = "Search-based test generation framework"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Quinn Thibeault", email = "quinn.thibeault@asu.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "antlr4-python3-runtime ~= 4.7.0",
    "attrs ~= 23.2",
    "numpy ~= 1.26",
    "scipy ~= 1.11",
    "typing-extensions ~= 4.9",
    "matplotlib ~= 3.8",
    "rtamt ~= 0.3",
]

[project.urls]
Documentation = "https://github.com/cpslab-asu/psy-taliro#readme"
Issues = "https://github.com/cpslab-asu/psy-taliro/issues"
Source = "https://github.com/cpslab-asu/psy-taliro"

[tool.hatch.version]
path = "src/staliro/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/staliro"]

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
    "mypy>=1.0.0",
    "black",
    "isort",
    "flake8 ~= 4.0",
    "flake8-comprehensions ~= 3.4",
    "flake8-pyi ~= 20.10",
    "flake8-return ~= 1.1",
    "flake8-use-fstring ~= 1.1",
    "flake8-annotations-complexity ~= 0.0.8",
    "flake8-todo ~= 0.7.0 ",
    "pep8-naming ~= 0.11.1"
]

[tool.hatch.envs.default.scripts]
lint = [
    "black --check src stubs tests examples",
    "flake8 -j 1 --statistics src stubs tests examples",
    "mypy --pretty",
]

[tool.hatch.envs.all]
template = "all"
dependencies = [
    "pytest",
    "pandas ~= 2.0",
]

[tool.hatch.envs.all.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.pyright]

[tool.ruff]

