[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psy-taliro"
dynamic = ["version"]
description = "Search-based test generation framework"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
    { name = "Quinn Thibeault", email = "quinn.thibeault@asu.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "antlr4-python3-runtime ~= 4.7.0",
    "attrs ~= 23.2",
    "numpy ~= 1.26",
    "scipy ~= 1.11",
    "typing-extensions ~= 4.9",
    "matplotlib ~= 3.8",
    "rtamt ~= 0.3",
]

[project.license-files]
paths = ["LICENSE"]

[project.urls]
Documentation = "https://github.com/cpslab-asu/psy-taliro#readme"
Issues = "https://github.com/cpslab-asu/psy-taliro/issues"
Source = "https://github.com/cpslab-asu/psy-taliro"

[tool.hatch.version]
path = "src/staliro/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/tests",
    "/stubs",
    "/examples"
]

[tool.hatch.build.targets.wheel]
packages = ["src/staliro"]

[tool.hatch.envs.default]
path = ".venv"

[tool.hatch.envs.style]
dependencies = [
    "mypy>=1.0.0",
    "black",
    "isort",
    "flake8 ~= 4.0",
    "flake8-comprehensions ~= 3.4",
    "flake8-pyi ~= 20.10",
    "flake8-return ~= 1.1",
    "flake8-use-fstring ~= 1.1",
    "flake8-annotations-complexity ~= 0.0.8",
    "flake8-todo ~= 0.7.0 ",
    "pep8-naming ~= 0.11.1"
]

[tool.hatch.envs.style.scripts]
check = [
    "black --check src stubs tests examples",
    "flake8 -j 1 --statistics src stubs tests examples",
    "mypy --pretty",
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx ~= 4.1",
    "sphinx-autodocgen ~= 1.2",
    "sphinx-autobuild >= 2021.3.14",
    "furo >= 2022.4.7",
    "rstcheck >= 5.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs public"
lint = "rstcheck"

[tool.hatch.envs.examples]
template = "examples"
dependencies = [
    "aerobench @ git+https://github.com/cpslab-asu/aerobenchvvpython.git",
    "kaleido ~= 0.2.1",
    "plotly ~= 5.3",
]

[tool.hatch.envs.examples.scripts]
f16 = "python3 examples/f16.py"
nonlinear = "python3 examples/nonlinear.py"


[tool.hatch.envs.all]
template = "examples"
extra-dependencies = [
    "pytest",
    "pandas ~= 2.0",
]

[tool.hatch.envs.all.scripts]
tests = "pytest {args:tests}"
examples = [
    "f16",
    "nonlinear",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.pyright]
venvPath = "."
venv = ".venv"

